@@ -13,6 +13,7 @@ seablock.lib.substingredient('sct-mil-circuit1', 'coal', 'wood-charcoal')
 seablock.lib.substingredient('steam-science-pack', 'coal', 'wood-charcoal')
 seablock.lib.substingredient('road', 'coal', 'wood-charcoal')
 seablock.lib.substingredient('carbon-separation-2', 'coal', 'wood-charcoal', 1)
+seablock.lib.substingredient('silo-coal', 'coal-crushed', 'wood-charcoal', 10)
 
 -- Disable coal cracking technology
 data.raw.technology['angels-coal-cracking'].enabled = false
