@@ -11,6 +11,7 @@ Date: ???
     - Reduced cost of Water Treatment tech
     - Hid recipe Wood Pellets > Carbon Dioxide
     - Hid redundant ore sorting recipes
+    - Re-enable Coal silo (Angel's Addons - Storage Options)
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
